--- a/LP-vite/index.html
+++ b/LP-vite/index.html
@@ -1,11 +1,23 @@
 <!doctype html>
 <html>
     <head>
-        <title>Maps Block</title>
+        <title>Lotto Oferta Block</title>
         <link
             rel="stylesheet"
             href="https://www.lightningdesignsystem.com/assets/styles/salesforce-lightning-design-system.min.css"
         />
+        <link
+            rel="stylesheet"
+            href="https://richtexteditor.com/richtexteditor/rte_theme_default.css"
+        />
+        <script
+            type="text/javascript"
+            src="https://richtexteditor.com/richtexteditor/rte.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://richtexteditor.com/richtexteditor/plugins/all_plugins.js"
+        ></script>
     </head>
     <body>
         <article class="slds-card">
@@ -24,7 +36,7 @@
                             >
                                 <use
                                     xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#contact"
+                                    xlink:href="/icons/standard-sprite/svg/symbols.svg#contact"
                                 />
                             </svg>
                         </span>
@@ -165,9 +177,57 @@
                             <div id="rules-sub-container"></div>
                         </div>
                     </div>
+                    <div id="div_editor2">
+                        <p>Hello world!</p>
+                        <p><img src="/images/editor-image.png" /></p>
+                    </div>
                 </div>
             </div>
         </article>
+        <script>
+            var editor2cfg = {};
+
+            editor2cfg.toolbarfactory_mydropdown = function (cmd, suffix) {
+                var editor = this; //Use this, maybe editor2 variable is not ready yet.
+                var option = {};
+                var inp;
+                option.fillinput = function (input) {
+                    inp = input;
+                    inp.innerText = "Code Snippets";
+                    inp.style.overflowX = "hidden";
+                };
+                option.fillpanel = function (panel) {
+                    panel.style.padding = "8px";
+
+                    function CreateItem(name, code) {
+                        var div = panel.appendChild(
+                            document.createElement("div")
+                        );
+                        div.className = "code-snippet-item";
+                        div.innerText = name;
+                        div.onclick = function () {
+                            editor.insertHTML(code);
+                        };
+                    }
+
+                    CreateItem("Welcome", "<b>Welcome to our website.</b>");
+                    CreateItem(
+                        "Copyright",
+                        "<b>Copyright (c) MyCompany. All right reversed.</b>"
+                    );
+                };
+
+                var btn = editor.createToolbarDropDown(option, cmd, suffix);
+                return btn;
+            };
+            editor2cfg.toolbar = "mytoolbar";
+            editor2cfg.toolbar_mytoolbar =
+                "{bold,italic}|{fontname,fontsize}|{forecolor,backcolor}|removeformat|mydropdown" +
+                "#{undo,redo,fullscreenenter,fullscreenexit,togglemore}";
+            editor2cfg.subtoolbar_mymenu = "inserttable,insertimage,insertcode";
+
+            var editor2 = new RichTextEditor("#div_editor2", editor2cfg);
+        </script>
 
         <script type="module" src="./main.js"></script>
     </body>
