Working rich text editor

--- a/LP-vite/index.html
+++ b/LP-vite/index.html
@@ -4,6 +4,12 @@
         <title>Lotto Oferta Block</title>
         <link
             rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
             href="https://www.lightningdesignsystem.com/assets/styles/salesforce-lightning-design-system.min.css"
         />
         <link
@@ -171,6 +177,7 @@
                                         id="number-input-id-0"
                                         class="slds-input"
                                         placeholder="Liczba zasad"
+                                        min="0"
                                     />
                                 </div>
                             </div>
@@ -182,5 +189,6 @@
         </article>
 
         <script type="module" src="./main.js"></script>
+        <script src="/richText/bundle.js"></script>
     </body>
 </html>
